# Fool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ThreadPool.hpp  block.cpp  block.hpp  cblas.hpp  common.hpp  convolution_filter.cpp  convolution_filter.hpp  data_layer.cpp  data_layer.hpp  db.hpp  db_txt.hpp  filler_filter.cpp  filler_filter.hpp  filter.cpp  filter.hpp  flatten_filter.cpp  flatten_filter.hpp  fool.config  fool.files  fool.includes  fully_connect_filter.cpp  fully_connect_filter.hpp  io.cpp  io.hpp  main.cpp  mathUtil.cpp  mathUtil.hpp  math_util.cpp  math_util.hpp  memory_controller.cpp  memory_controller.hpp  pooling_filter.hpp  registry.hpp
cmake/: Dependencies.cmake
